--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <title>Scavenger Hunt</title>
+    <style>
+      html body{
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
